exports[`fjs changes-quotes 0`] = `
"let x = 'foobar';
x = 'foobar';
x = '\"';
x = '\"';
x = '\\'';
x = '\\'';
"
`;

exports[`fjs code_01 0`] = `
"/**
 * Copyright 2004-present Facebook. All Rights Reserved.
 */

'use strict';

import Tokens from './Tokens';

import comments from './printers/comments';
import expressions from './printers/expressions';
import literals from './printers/literals';
import misc from './printers/misc';
import statements from './printers/statements';

/**
 * Printers convert an AST into tokens which may then be formatted.
 */
export default function getPrinters(x, y, z) {
  return {
    ...comments,
    ...expressions,
    ...literals,
    ...misc,
    ...statements,
    ...thisissomethingreallylongthatwillbreak,
  };
};
"
`;

exports[`fjs code_02 0`] = `
"x;
// There should be no extra new lines in between these statements.
x;
"
`;

exports[`fjs large-numbers 0`] = `
"100000000000000000000123456789;
"
`;

exports[`fjs simple-block-comment 0`] = `
"/*
 * comment
 */
1 + 1;
"
`;

exports[`fjs simple-comment 0`] = `
"// This is a comment
1 + 1;
"
`;

exports[`fjs simple-scope-breaking 0`] = `
"const foo = {
  meh: 'reasonably long value',
  meh2: 'this one will make things wrap, hopefully...',
};
"
`;

exports[`fjs string-escapes 0`] = `
"let x = '\\\\\\\\\\\\\\'';
"
`;

exports[`fjs variable-declarations 0`] = `
"var foo, bar;
var baz;
let buz = 1;
const qux = { one: 1, two: 2 };
"
`;

exports[`fjs works 0`] = `
"1 + 1;
"
`;
